@@ -26,16 +26,15 @@ import com.github._1c_syntax.bsl.languageserver.context.symbol.MethodSymbol;
 import com.github._1c_syntax.bsl.languageserver.context.symbol.ModuleSymbol;
 import com.github._1c_syntax.bsl.languageserver.context.symbol.ParameterDefinition;
 import com.github._1c_syntax.bsl.languageserver.context.symbol.VariableSymbol;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.description.MethodDescription;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.description.ParameterDescription;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.description.TypeDescription;
 import com.github._1c_syntax.bsl.languageserver.utils.Resources;
+import com.github._1c_syntax.bsl.parser.description.HyperlinkTypeDescription;
+import com.github._1c_syntax.bsl.parser.description.MethodDescription;
+import com.github._1c_syntax.bsl.parser.description.ParameterDescription;
+import com.github._1c_syntax.bsl.parser.description.TypeDescription;
 import lombok.RequiredArgsConstructor;
 import org.eclipse.lsp4j.SymbolKind;
 import org.springframework.stereotype.Component;
 
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -112,30 +111,19 @@ public class DescriptionFormatter {
   }
 
   public String getExamplesSection(MethodSymbol methodSymbol) {
-    var examples = methodSymbol.getDescription()
+    return methodSymbol.getDescription()
       .map(MethodDescription::getExamples)
-      .orElseGet(Collections::emptyList);
-    return getSectionWithCodeFences(examples, EXAMPLES_KEY);
+      .filter(example -> !example.isEmpty())
+      .map(codeBlock -> "**" + getResourceString(EXAMPLES_KEY) + ":**\n\n" + "```bsl\n" + codeBlock + "\n```")
+      .orElseGet(String::new);
   }
 
   public String getCallOptionsSection(MethodSymbol methodSymbol) {
-    var callOptions = methodSymbol.getDescription()
+    return methodSymbol.getDescription()
       .map(MethodDescription::getCallOptions)
-      .orElseGet(Collections::emptyList);
-    return getSectionWithCodeFences(callOptions, CALL_OPTIONS_KEY);
-  }
-
-  public String getSectionWithCodeFences(Collection<String> codeBlocks, String resourceKey) {
-    var codeFences = codeBlocks
-      .stream()
-      .map(codeBlock -> "```bsl\n" + codeBlock + "\n```")
-      .collect(Collectors.joining("\n"));
-
-    if (!codeFences.isEmpty()) {
-      codeFences = "**" + getResourceString(resourceKey) + ":**\n\n" + codeFences;
-    }
-
-    return codeFences;
+      .filter(callOption -> !callOption.isEmpty())
+      .map(codeBlock -> "**" + getResourceString(CALL_OPTIONS_KEY) + ":**\n\n" + "```bsl\n" + codeBlock + "\n```")
+      .orElseGet(String::new);
   }
 
   public String getLocation(ModuleSymbol symbol) {
@@ -148,8 +136,7 @@ public class DescriptionFormatter {
       .getMdoRefLocal(md)
     ).orElseGet(documentContext::getMdoRef);
 
-    return String.format(
-      "[%s](%s)",
+    return "[%s](%s)".formatted(
       mdoRefLocal,
       uri
     );
@@ -160,8 +147,7 @@ public class DescriptionFormatter {
     var startPosition = symbol.getSelectionRange().getStart();
     var mdoRef = documentContext.getMdoRef();
 
-    return String.format(
-      "[%s](%s#%d)",
+    return "[%s](%s#%d)".formatted(
       mdoRef,
       documentContext.getUri(),
       startPosition.getLine() + 1
@@ -178,8 +164,7 @@ public class DescriptionFormatter {
       .orElse("");
     mdoRef += parentPostfix;
 
-    return String.format(
-      "[%s](%s#%d)",
+    return "[%s](%s#%d)".formatted(
       mdoRef,
       documentContext.getUri(),
       startPosition.getLine() + 1
@@ -201,8 +186,7 @@ public class DescriptionFormatter {
     var returnedValueType = getReturnedValueTypeDescriptionPart(methodSymbol);
     var export = methodSymbol.isExport() ? (" " + getResourceString(EXPORT_KEY)) : "";
 
-    return String.format(
-      signatureTemplate,
+    return signatureTemplate.formatted(
       methodKind,
       methodName,
       parameters,
@@ -219,8 +203,7 @@ public class DescriptionFormatter {
 
     var parameters = getParametersSignatureDescription(methodSymbol);
 
-    return String.format(
-      signatureTemplate,
+    return signatureTemplate.formatted(
       annotationKind,
       annotationName,
       parameters
@@ -234,8 +217,7 @@ public class DescriptionFormatter {
     var name = symbol.getName();
     var export = symbol.isExport() ? (" " + getResourceString(EXPORT_KEY)) : "";
 
-    return String.format(
-      signatureTemplate,
+    return signatureTemplate.formatted(
       varKey,
       name,
       export
@@ -308,11 +290,11 @@ public class DescriptionFormatter {
     var parameterTemplate = "  ".repeat(level) + PARAMETER_TEMPLATE;
 
     if (typesMap.size() == 1) {
-      result.add(String.format(parameterTemplate,
+      result.add(parameterTemplate.formatted(
         parameterDescription.name(),
         typesMapToString(typesMap, 0)));
     } else {
-      result.add(String.format(parameterTemplate, parameterDescription.name(), ""));
+      result.add(parameterTemplate.formatted(parameterDescription.name(), ""));
       result.add(typesMapToString(typesMap, level + 1));
     }
     return result.toString();
@@ -323,11 +305,10 @@ public class DescriptionFormatter {
     var parameterDescription = parameterDefinition.getDescription();
     return parameterDescription
       .map(description -> parameterToString(description, level))
-      .orElseGet(() -> String.format(
-          PARAMETER_TEMPLATE,
-          parameterDefinition.getName(),
-          ""
-        )
+      .orElseGet(() -> PARAMETER_TEMPLATE.formatted(
+        parameterDefinition.getName(),
+        ""
+      )
       );
 
   }
@@ -338,13 +319,13 @@ public class DescriptionFormatter {
     parameterTypes.forEach((TypeDescription type) -> {
       var typeDescription = typeToString(type, level);
       String typeName;
-      if (type.isHyperlink()) {
-        typeName = String.format("[%s](%s)", type.name(), type.link());
+      if (type instanceof HyperlinkTypeDescription hyperlinkTypeDescription) {
+        typeName = "[%s](%s)".formatted(hyperlinkTypeDescription.name(), hyperlinkTypeDescription.hyperlink());
       } else {
-        typeName = String.format("`%s`", type.name());
+        typeName = "`%s`".formatted(type.name());
       }
 
-      types.merge(typeDescription, typeName, (oldValue, newValue) -> String.format("%s | %s", oldValue, newValue));
+      types.merge(typeDescription, typeName, "%s | %s"::formatted);
     });
     return types;
   }
@@ -356,7 +337,7 @@ public class DescriptionFormatter {
       if (key.isBlank()) {
         result.add(value);
       } else {
-        result.add(String.format("%s%s %s", indent, value, key));
+        result.add("%s%s %s".formatted(indent, value, key));
       }
     });
     return result.toString();
@@ -369,12 +350,12 @@ public class DescriptionFormatter {
     if (!description.isBlank()) {
       description = "- " + description;
     }
-    if (!type.parameters().isEmpty()) {
+    if (!type.fields().isEmpty()) {
       description += ":";
     }
 
     result.add(description);
-    type.parameters().forEach((ParameterDescription parameter) ->
+    type.fields().forEach((ParameterDescription parameter) ->
       result.add(parameterToString(parameter, level + 1)));
     return result.toString();
   }
