@@ -21,8 +21,6 @@
  */
 package com.github._1c_syntax.bsl.languageserver.reporters;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import com.github._1c_syntax.bsl.languageserver.reporters.data.AnalysisInfo;
 import com.github._1c_syntax.bsl.languageserver.reporters.data.FileInfo;
 import com.github._1c_syntax.bsl.languageserver.util.TestUtils;
@@ -34,11 +32,10 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
+import tools.jackson.dataformat.xml.XmlMapper;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -63,7 +60,7 @@ class JUnitReporterTest {
   }
 
   @Test
-  void report() throws IOException {
+  void report() {
 
     // given
     List<Diagnostic> diagnostics = new ArrayList<>();
@@ -92,7 +89,7 @@ class JUnitReporterTest {
     ));
 
     var documentContext = TestUtils.getDocumentContext(
-      Paths.get("./src/test/java/diagnostics/CanonicalSpellingKeywordsDiagnostic.bsl").toUri(),
+      Path.of("./src/test/java/diagnostics/CanonicalSpellingKeywordsDiagnostic.bsl").toUri(),
       ""
     );
     String sourceDir = ".";
@@ -105,7 +102,7 @@ class JUnitReporterTest {
     reporter.report(analysisInfo, Path.of(sourceDir));
 
     // then
-    ObjectMapper mapper = new XmlMapper();
+    var mapper = new XmlMapper();
     JUnitTestSuites report = mapper.readValue(file, JUnitTestSuites.class);
 
     assertThat(report).isNotNull();
